--- a/project_market/css/style.css
+++ b/project_market/css/style.css
@@ -373,7 +373,7 @@ body {
     margin-bottom: 10px;
 }
 
-.product-menu .arrow .btn_1, .btn_2 {
+.product-menu .arrow .btn-1, .btn-2 {
     border: #ababab 1px solid;
     border-radius: 0;
     height: 35px;
@@ -385,7 +385,7 @@ body {
     background: #3ac3ff;
 }
 
-.product-menu .arrow .btn_1 {
+.product-menu .arrow .btn-1 {
     margin-right: 5px;
 }
 
@@ -723,7 +723,74 @@ body {
     width: 100%;
     background-size:cover;
     height: max-content;
-}   
+}
+
+.product-menu-2 {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-top: 50px;
+    margin-left: 30px;
+    margin-right: 30px;
+    border-bottom: #ababab 1px solid;
+}
+
+.product-menu-2 .product-menu-left {
+    display: flex;
+}
+
+.product-menu-2 .product-menu-left .featured {
+    border-bottom: #3ac3ff 1px solid;
+}
+
+.product-menu-2 .product-menu-left .featured h5 {
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.product-menu-2 .product-menu-left .new-arrivals h5 {
+    font-size: 16px;
+    font-weight: bold;
+    color: #ababab;
+}
+
+.product-menu-2 .product-menu-left .best-sellers h5 {
+    font-size: 16px;
+    font-weight: bold;
+    color: #ababab;
+}
+
+.product-menu-2 .product-menu-left .line {
+    width: 2px;
+    height: 20px;
+    background: #ababab;
+    margin: 0 20px;
+}
+
+.product-menu-2 .arrow {
+    height: 100%;
+    margin-bottom: 10px;
+}
+
+.product-menu-2 .arrow .btn-1, .btn-2 {
+    border: #ababab 1px solid;
+    border-radius: 0;
+    height: 35px;
+    width: 25px;
+}
+
+.product-menu-2 .arrow .btn:hover {
+    border: #ababab 1px solid;
+    background: #3ac3ff;
+}
+
+.product-menu-2 .arrow .btn-1 {
+    margin-right: 5px;
+}
+
+.product-menu-2 .arrow .btn img {
+    margin-bottom: 8px;
+}
 
 .footer {
     /* background: #f2f2f2; */
